deployments/mysqlserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqlserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysqlserver
  template:
    metadata:
      labels:
        app: mysqlserver
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: import-sql
              mountPath: "/docker-entrypoint-initdb.d/import.sql"
              subPath: import.sql
              readOnly: true
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: import-sql
          configMap:
            name: init-db
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysqlserver
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
